app/src/main/kotlin/com/example/dmitry/grades/ui/base/ui/errors/ErrorView.kt
package com.example.dmitry.grades.ui.base.ui.errors

import androidx.lifecycle.LifecycleOwner

interface ErrorView : LifecycleOwner {
    fun showMessage(message: String)
}